<resources>
    <string name="app_name">Math Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="сomposition_of_the_number">Состав числа</string>
    <string name="description">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостоющее число.</string>
    <string name="start">Начнем</string>
    <string name="select_a_level">Выберите уровень:</string>
    <string name="test">Тестовый</string>
    <string name="easy">Легкий</string>
    <string name="question_mark">\?</string>
    <string name="required_answers">Необходимое количество правильных ответов: %s</string>
    <string name="score_answers">Ваш счёт: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="normal">Средний</string>
    <string name="hurd">Сложный</string>
    <string name="progress_answers">Правильных ответов %s(минимум %s)</string>
</resources>